----------------------------------------------------------------------
 OmegaT 6.1.0
----------------------------------------------------------------------
  21 Enhancement
  30 Bug fixes
----------------------------------------------------------------------
6.1.0 vs 6.0.0

  Implemented requests:

  - Make language libraries in LanguageTools as module
  https://sourceforge.net/p/omegat/feature-requests/1714/

  - Use SLF4J as logging facade framework
  https://sourceforge.net/p/omegat/feature-requests/1710/

  - team: apache HttpClient for git connection
  https://sourceforge.net/p/omegat/feature-requests/1706/

  - Request to add new API to allow plugins/modules to add menu item in requested place
  https://sourceforge.net/p/omegat/feature-requests/1703/

  - Team: SVN support svn+ssh protocol with key authentication
  https://sourceforge.net/p/omegat/feature-requests/1700/

  - SVN/Team project should respect access URL specified
  https://sourceforge.net/p/omegat/feature-requests/1707/

  - Team: SVN: Replacing trilead-ssh2 with Apache sshd
  https://sourceforge.net/p/omegat/feature-requests/1699/

  - Better error message for omegat.project failure
  https://sourceforge.net/p/omegat/feature-requests/1696/

  - Generate JSON format stastics file when save
  https://sourceforge.net/p/omegat/feature-requests/1695/

  - Generate and compile TXT and JSON file when committing target files
  https://sourceforge.net/p/omegat/feature-requests/1690/

  - Build System: update gradle verison to 7.5.1
  https://sourceforge.net/p/omegat/feature-requests/1691/

  - Update LanguageTool to latest version (6.1)
  https://sourceforge.net/p/omegat/feature-requests/1637/

  - Team feature: SSH support id_ecdsa and id_ed25519 for default key
  https://sourceforge.net/p/omegat/feature-requests/1598/

  - Use Jackson library as XML parser
  https://sourceforge.net/p/omegat/feature-requests/1582/

  - Add nashorn javascript engine[Java 17 compatibility]